--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id 'java'
     id("xyz.jpenilla.run-paper") version "2.3.1"
     id 'maven-publish'
+    id 'java-library'
 }
 
 group = 'com.github.ambi-dev'
-version = '1.0'
+version = '1.0.0'
 
 repositories {
     mavenCentral()
